s5 has 3.0 openES GL whereas GPU requires 3.1 or higher

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission-sdk-23 android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-feature android:glEsVersion="0x00030001" android:required="true" />
     <!--<uses-feature android:name="android.hardware.camera"-->
         <!--android:required="true" />-->
 
