--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
         implementation 'org.slf4j:slf4j-android:1.7.7'
         implementation 'org.tensorflow:tensorflow-android:+'
         implementation 'org.tensorflow:tensorflow-lite:+'
+//        implementation 'org.tensorflow:tensorflow-lite:0.0.0-gpu-experimental'
         testImplementation 'junit:junit:4.12'
         androidTestImplementation 'com.android.support.test:runner:1.0.2'
         androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
