--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ android {
         implementation 'com.android.support.constraint:constraint-layout:1.1.3'
         implementation 'com.android.support:design:28.0.0'
         implementation 'org.slf4j:slf4j-android:1.7.7'
-        implementation 'org.tensorflow:tensorflow-android:+'
-        implementation 'org.tensorflow:tensorflow-lite:+'
-//        implementation 'org.tensorflow:tensorflow-lite:0.0.0-gpu-experimental'
+//        implementation 'org.tensorflow:tensorflow-android:+'
+//        implementation 'org.tensorflow:tensorflow-lite:+'
+        implementation 'org.tensorflow:tensorflow-lite:0.0.0-gpu-experimental'
         testImplementation 'junit:junit:4.12'
         androidTestImplementation 'com.android.support.test:runner:1.0.2'
         androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
